--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2700,7 +2700,7 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #4acaa8;
+		background:#79db7c;
 		color: #d2f2e9;
 		height: 100%;
 		overflow-y: auto;
@@ -2752,7 +2752,6 @@ input, select, textarea {
 
 			#header > header p {
 				color: #d2f2e9;
-				font-style: italic;
 				margin: 1em 0 0 0;
 			}
 
