--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2196,6 +2196,7 @@ input, select, textarea {
 				border-radius: 100%;
 				display: block;
 				width: 100%;
+				height: 50%;
 			}
 
 		.image.main {
