lotsa pictures and styling

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1785,7 +1785,7 @@ input, select, textarea {
 	}
 
 	header.major h2 {
-		color: #4acaa8;
+		color: #5b8266;
 		font-size: 3.5em;
 	}
 
@@ -2403,7 +2403,7 @@ input, select, textarea {
 			}
 
 			ul.feature-icons li:before {
-				background: #79db7c;
+				background: #5b8266;
 				border-radius: 100%;
 				color: #ffffff;
 				display: block;
@@ -2436,6 +2436,11 @@ input, select, textarea {
 			ul.icons li .icon:before {
 				font-size: 1.25em;
 			}
+
+/* Trophies */
+	ul.trophies {
+		list-style-type: "🏆";
+	}
 
 /* Table */
 
@@ -2701,7 +2706,7 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background:#79db7c;
+		background:#5b8266;
 		color: #d2f2e9;
 		height: 100%;
 		overflow-y: auto;
@@ -2752,7 +2757,7 @@ input, select, textarea {
 			}
 
 			#header > header p {
-				color: #d2f2e9;
+				color: #aef6c7;
 				margin: 1em 0 0 0;
 			}
 
@@ -2772,7 +2777,7 @@ input, select, textarea {
 			}
 
 				#header > footer .icons li a {
-					color: #b7eadc;
+					color: #aef6c7;
 				}
 
 		#header > nav {
@@ -2807,8 +2812,8 @@ input, select, textarea {
 
 						#header > nav ul li a.active {
 							background: #fff;
-							border-left: solid 30px #4c8a4a;
-							color: #4c8a4a !important;
+							border-left: solid 30px #3e6259;
+							color: #3e6259 !important;
 						}
 
 					#header > nav ul li:first-child {
